on-the-fly tests: compile & link compact test cases